--- a/templates/main.html
+++ b/templates/main.html
@@ -18,7 +18,7 @@
         <a href="{{ url_for('sign_up')}}" class="card-link"
           >Create New Account</a
         >
-        <a href="{{ url_for('login')}}" class="card-link">Signin Page</a>
+        <a href="{{ url_for('login')}}" class="card-link">Login Page</a>
         {% endif %}
       </div>
     </div>
